<resources>
    <string name="app_name">TripLog</string>

    <string name="UPLOAD">Hochladen</string>
    <string name="TRIPS">Aufnahme</string>
    <string name="SETTINGS">Informationen</string>

    <string name="TRACKING_ACTIVE">Aufnahme läuft…</string>
    <string name="TRACKING_INACTIVE">Aufnahme gestoppt</string>

    <string name="UPLOAD_SUCCESSFUL">Hochgeladen</string>
    <string name="UPLOAD_NOT_SUCCESSFUL">Nicht Hochgeladen</string>

    <string name="VECTOR_GRAPHIC">VECTOR_GRAPHIC</string>

    <string name="USER_ID">Benutzer ID</string>
    <string name="DSGVO_STATUS">DSGVO</string>
    <string name="GITHUB_HEADER">Github (Einblick in die Datenaufnahme)</string>
    <string name="GITHUB_LINK">https://github.com/lukpausr/android-TripLog</string>
    <string name="EXPLAIN_HEADER_1">Studienarbeit der DHBW - Stuttgart</string>
    <string name="EXPLAIN_HEADER_2">Eine kurze Erklärung:</string>
    <string name="EXPLAIN_TEXT_1">
        Als Nutzer dieser App tragen Sie zu einer Studienarbeit
        der DHBW Stuttgart bei. Anhand der aufgenommenen Daten soll durch maschinelles Lernen
        ein Modell erstellt werden, welches mittels eines
        Bewegungsprofiles auf das genutzte Transportmittel schließen kann.
    </string>
    <string name="EXPLAIN_TEXT_2">Deshalb ist es erforderlich, dass sich ein aufgezeichneter Trip immer nur auf
        <b><u>ein</u></b> Verkehrsmittel bezieht. Die Aufnahme muss beim Wechsel des
        Verkehrsmittels beendet und dann neu gestartet werden.
    </string>
    <string name="EXPLAIN_TEXT_3">
        Zur Aufzeichnung eines Trips muss das GPS Ihres Handys aktiviert sein
    </string>
    <string name="EXPLAIN_HEADER_STEP_1">Trip aufzeichnen:</string>
    <string name="EXPLAIN_STEP_1">
        1. wähle Transportmittel (Transport Type)\n2. Starte die Aufnahme
        (Start Recording)\n3. Stoppe die Aufnahme (Stop Recording)
    </string>
    <string name="EXPLAIN_HEADER_STEP_2">Trip hochladen:</string>
    <string name="EXPLAIN_STEP_2">
        1. wähle Menüpunkt "Upload"\n2. Hochladen mit Upload
    </string>
    <string name="accept">Akzeptieren</string>
    <string name="decline">Ablehnen</string>
    <string name="transport_type">Transportmittel</string>
    <string name="tracking_inactive">Aufnahme gestoppt</string>
    <string name="start_recording">Aufnahme starten</string>
    <string name="stop_recording">Aufnahme stoppen</string>
</resources>