<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/tvSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/SETTINGS"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/svSettings"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">
    </TextView>

    <ScrollView
        android:id="@+id/svSettings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="vertical"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSettings">

        <LinearLayout
            android:id="@+id/linearLayoutSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvUserIDHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/USER_ID"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/tvUserID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/USER_ID"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/tvDSGVOHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DSGVO_STATUS"
                android:textStyle="bold"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp" />

            <TextView
                android:id="@+id/tvDSGVO"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DSGVO_STATUS"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp" />

            <TextView
                android:id="@+id/tvGithubHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GITHUB_HEADER"
                android:textStyle="bold"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/tvGithub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GITHUB_LINK"
                android:autoLink="web"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:textColorLink="@color/dhbw_grey" />

            <TextView
                android:id="@+id/tvExplainHeader_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/EXPLAIN_HEADER_1"
                android:textStyle="bold"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp" />

            <TextView
                android:id="@+id/tvExplainHeader_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/EXPLAIN_HEADER_2"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp" />

            <TextView
                android:id="@+id/tvExplainText_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/EXPLAIN_TEXT_1"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp" />

            <TextView
                android:id="@+id/tvExplainText_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/EXPLAIN_TEXT_2"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp" />

            <TextView
                android:id="@+id/tvExplainText_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/EXPLAIN_TEXT_3"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp" />

            <TextView
                android:id="@+id/tvExplainHeaderStep_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/EXPLAIN_HEADER_STEP_1"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp" />

            <TextView
                android:id="@+id/tvExplainStep_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/EXPLAIN_STEP_1"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="20dp" />

            <TextView
                android:id="@+id/tvExplainHeaderStep_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/EXPLAIN_HEADER_STEP_2"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp" />

            <TextView
                android:id="@+id/tvExplainStep_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/EXPLAIN_STEP_2"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="20dp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>